prevent the hero image from getting too small

--- a/src/style.css
+++ b/src/style.css
@@ -898,13 +898,12 @@ svg {
   }
 
   .hero-img-container {
-    flex-grow: 1;
     margin-bottom: 0;
     margin-left: 0;
   }
 
   .hero-text-container {
-    flex-grow: 1;
+    flex-shrink: 1.5;
     text-align: left;
   }
 
